--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <body>
 	<header>
+		<div>
 
 		<nav>
 
@@ -20,9 +21,13 @@
 				<li><a href="#">Каталог</a></li>
 				<li><a href="#">Доставка</a></li>
 				<li><a href="#">Контакты</a></li>
-
 			</ul>
 		</nav>
+		</div>
+		<div>
+			<a href="tel:+79453425555">+79453425555</a>
+		</div>
+
 	</header>
 	<main>
 		<section>
